[project]
name = "sonar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "datasets>=4.5.0",
    "fairseq2>=0.7.0",
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "plotly>=6.5.2",
    "rich>=13.9.4",
    "scikit-learn>=1.8.0",
    "sonar-space>=0.5.0",
    "torch>=2.9.0",
]